rollback SelenoidRemoteDriver changes