@@ -25,8 +25,7 @@ public class SelenoidRemoteDriverDesktop {
 //        desiredCapabilities.setCapability(CapabilityType.PROXY, ProxyProvider.getSeleniumProxy());
 
         RemoteWebDriver remoteDriver = new RemoteWebDriver(
-//                URI.create("http://" + PropertiesContext.getInstance().getProperty("selenoid.url") + ":4444/wd/hub").toURL(),
-                new URL("http://" + PropertiesContext.getInstance().getProperty("selenoid.url") + ":4444/wd/hub"),
+                URI.create("http://" + PropertiesContext.getInstance().getProperty("selenoid.url") + ":4444/wd/hub").toURL(),
                 desiredCapabilities
         );
         remoteDriver.manage().window().setSize(new Dimension(1920, 1080));
